// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Button /> renders correctly 1`] = `
<button
  className="btn btn-default"
>
  <div />
</button>
`;

exports[`<Button /> renders optional Tooltip when props.tip provided 1`] = `
<Tooltip
  tip="test_tip"
>
  <button
    className="btn btn-default"
  >
    <div />
  </button>
</Tooltip>
`;

exports[`<Button /> renders optional icon 1`] = `
<button
  className="btn btn-default btn-with-icon"
>
  <div>
    <Icon
      className="text-danger"
      faStyle="fas"
      fixedWidth={false}
      name="folder"
    />
  </div>
</button>
`;
